@@ -1,8 +1,8 @@
 Package: dglars
 Type: Package
 Title: Differential Geometric Least Angle Regression
-Version: 2.1.6
-Date: 2020-02-25
+Version: 2.1.7
+Date: 2023-10-08
 Authors@R: c(person(given = "Luigi", family = "Augugliaro", email = "luigi.augugliaro@unipa.it", role = c("aut", "cre")),
              person(given = "Angelo", family = "Mineo", role = "aut"),
              person(given = "Ernst", family = "Wit", role = "aut"),
@@ -19,10 +19,10 @@ Maintainer: Luigi Augugliaro <luigi.augugliaro@unipa.it>
 Imports: methods
 Description: Differential geometric least angle regression method for fitting sparse generalized linear models. In this version of the package, the user can fit models specifying Gaussian, Poisson, Binomial, Gamma and Inverse Gaussian family. Furthermore, several link functions can be used to model the relationship between the conditional expected value of the response variable and the linear predictor. The solution curve can be computed using an efficient predictor-corrector or a cyclic coordinate descent algorithm, as described in the paper linked to via the URL below.
 License: GPL (>= 2)
-URL: http://www.jstatsoft.org/v59/i08/.
+URL: https://www.jstatsoft.org/v59/i08/.
 LazyLoad: yes
 Depends: Matrix, R (>= 3.2)
 NeedsCompilation: yes
 Repository: CRAN
-Packaged: 2020-02-25 11:56:04 UTC; augugliaro
-Date/Publication: 2020-02-26 10:40:02 UTC
+Packaged: 2023-10-09 17:10:50 UTC; francesca
+Date/Publication: 2023-10-09 17:30:02 UTC
