@@ -1,5 +1,5 @@
-48eb8761525f2c8d03106a5a24fa1bf4 *ChangeLog
-4d118e891023160032c7728897fbe400 *DESCRIPTION
+d5d335cb8fd8718047b730444d653416 *ChangeLog
+b13551ecc60bc56a9609802eda160bde *DESCRIPTION
 2c8b48af4dd31c66d2f44aacffb87212 *NAMESPACE
 6f33de887e28148af8587450070830e5 *R/AIC.dglars.R
 2228b8cceb54976f0e7cd7944e144292 *R/BIC.dglars.R
@@ -16,7 +16,7 @@ b32d081e2d8608bab4b9422f34ef5a3a *R/d2mu_de2_mk.R
 880859ca043e12ade47381048ebaf3c0 *R/dglars_ccd.R
 a98d3b1ea96511a4368cada2b4bd2246 *R/dglars_pc.R
 67b103edc7556454051fbb862614d83b *R/gdf.R
-65ac504a82abb55ffda9353a6d6df483 *R/grcv.R
+dae1d072db3c013c997d682ccd18da28 *R/grcv.R
 ac9cc8d5cd6aef966d0305dfa03ea3c0 *R/logLik.dglars.R
 0b5acdfcc61a1e3cfa9ed5131821e53f *R/make_action.R
 fc22768a086131c2c86b81e8a4b5818a *R/make_coef.R
@@ -24,7 +24,7 @@ fc22768a086131c2c86b81e8a4b5818a *R/make_coef.R
 fa7d9e3e1c182caf28584b3853b399d0 *R/make_dglars.R
 a244fcf0ff17e089c5880497eb44a214 *R/make_ru.R
 3b408a298df04e22a6680f2a22075282 *R/make_summary_table.R
-72278567083fcf69407549992d54214b *R/phihat.R
+cf5bc9eaee4d324e8515ba90314bc74d *R/phihat.R
 dd667866f29dfff4dc8d97839488f11a *R/plot.cvdglars.R
 6524dc1970b517d298d740e9717b8d39 *R/plot.dglars.R
 8cbaf4e1bdb24ae6187e6b39cb9f94c4 *R/predict.dglars.R
@@ -38,21 +38,21 @@ d6d260efacfb5804f8424f4f6dc5c011 *data/alon.RData
 f5941e4d6e3985ad8657abfb91326447 *data/breast.RData
 24b37b86587b18e5742cdf4c8cc7c9e0 *data/datalist
 dd65e152c59ea21d62ce75f1cc66e07c *data/duke.RData
-f6e2c6d215351e4312346bca741c5eb8 *inst/CITATION
+eab97e993b4d3cfade906cf97e61d24d *inst/CITATION
 cbaca7951b5f190703e36038627f7743 *man/AIC.dglars.Rd
 0e7094775fe0b54a92bd25a781234d41 *man/alon.Rd
 4d47ccd4dca27e4c310b3320484efa63 *man/breast.Rd
 3271af198a373db3ebf52ee0dc4c33ac *man/coef.cvdglars.Rd
 85d3dcefdc45763ae9ae08639a857147 *man/coef.dglars.Rd
-d1b9a3da93e2abca4caaf2766f4c9986 *man/cvdglars.Rd
+ef15642d8a48629c8b5d130221f1b645 *man/cvdglars.Rd
 f4b6368a63259214f352a920b395e563 *man/dglars-internal.Rd
-055c30efad3e55765b4e1d14fe1308e3 *man/dglars-package.Rd
-2cfef32228cd4968e2033fd6fff4f246 *man/dglars.Rd
+e0be90a39aec1495e96aa1553a3c86c1 *man/dglars-package.Rd
+f4cd22f89e62b741d871ca06b03fd153 *man/dglars.Rd
 50a780b6879f73ec88258a113bc797f9 *man/duke.Rd
-645787e91b5c20bff4af646181d5e65b *man/gdf.Rd
+e91cab3a5d6171a6a3cbb851e49c06b8 *man/gdf.Rd
 f95a322341c8e3692f6e053379c32200 *man/grcv.Rd
 6f9965fc41af31569639287793b4f93a *man/logLik.dglars.Rd
-fdbd792564af9b2dc001c4e1866bd87c *man/phihat.Rd
+a83f094504ccd18d0bf024e802d5ee9b *man/phihat.Rd
 d7ed7f71e089c6f1b4bf0aa4af48f039 *man/plot.cvdglars.Rd
 ccc010df63c32fd478dd4319cb6bc591 *man/plot.dglars.Rd
 196da4bb7fa01c0ef055e9cd5cc286ab *man/predict.dglars.Rd
@@ -78,4 +78,4 @@ d17b628393fd27c7ef6b24d25c18f6f7 *src/pc_gaussian_g.f90
 5e26d2dad7e571266235be58e52c679f *src/pc_pois_g.f90
 8c48535fb642da403a00f153d28d9587 *src/predict.f90
 1e684865238e9d24cbaa0e3d935a83db *src/shared.f90
-545e1aac547dfb07de15592bc6e9af6a *src/tools.f90
+bbb9204d82640e9c59e4608a0320b0b0 *src/tools.f90
