@@ -1,20 +1,19 @@
-citHeader("To cite dglars in publications use:")
-
-citEntry(entry = "Article",
+bibentry(bibtype = "Article",
   title        = "{dglars}: An {R} Package to Estimate Sparse Generalized Linear Models",
-  author       = personList(as.person("Luigi Augugliaro"),
-                   as.person("Angelo M. Mineo"),
-                   as.person("Ernst C. Wit")),
+  author       = c(person(given = "Luigi",
+                          family = "Augugliaro",
+                          email = "luigi.augugliaro@unipa.it"),
+                   person(given = c("Angelo", "M."),
+                          family = "Mineo",
+                          email = "angelo.mineo@unipa.it"),
+                   person(given = c("Ernst", "C."),
+                          family = "Wit",
+                          email = "wite@usi.ch")),
   journal      = "Journal of Statistical Software",
   year         = "2014",
   volume       = "59",
   number       = "8",
   pages        = "1--40",
-  url          = "http://www.jstatsoft.org/v59/i08/",
-
-  textVersion  =
-  paste("Luigi Augugliaro, Angelo M. Mineo, Ernst C. Wit (2014).",
-        "dglars: An R Package to Estimate Sparse Generalized Linear Models.",
-        "Journal of Statistical Software, 59(8), 1-40.",
-        "URL http://www.jstatsoft.org/v59/i08/.")
+  doi          = "10.18637/jss.v059.i08",
+  header       = "To cite cglasso in publications use:"
 )
